Fix topbar search on IE11
Original commit: 2c84f8b3ab26aee64a6a75b3e970df9800bebe20

--- a/decidim-core/app/assets/stylesheets/decidim/modules/_navbar.scss
+++ b/decidim-core/app/assets/stylesheets/decidim/modules/_navbar.scss
@@ -56,6 +56,7 @@ $navbar-active-shadow-medium: inset 0 4px 0 0 var(--primary);
 .topbar__search{
   position: relative;
   max-width: 220px; // Safari fix
+  overflow: hidden; // IE11 fix
 
   input{
     color: $navbar-color-hover;
